# EssentialStone

./: .gitignore  AGENTS.md  LICENSE  README.md  build.bat  pyproject.toml
.github/workflows/: release.yml
src/endstone_essentialstone/: Command.py  __init__.py  config.toml  eng.json  plugin.py
src/endstone_essentialstone/resources/: config.json
src/endstone_essentialstone/resources/languages/: en-us.json
src/endstone_essentialstone/resources/settings/: tpa.json
src/endstone_essentialstone/utils/: config.py  language.py
