[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "endstone_essentialstone"

dynamic = ["version"]
dependencies = ["typing_extensions>=4.0"]
authors = [
    { name = "LenlenlL6" },
    { name = "literalllyaturtle" }
]
description = "Provide some extra for your survival server!"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["endstone", "ruff"]

[project.entry-points."endstone"]
essentialstone = "endstone_essentialstone:EssentialStone"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_essentialstone"]

[tool.hatch.version]
source = "vcs"
